# zelda

./: .gitignore  Procfile  academic_paper.py  ai.py  app.py  characters.py  chunks.py  domain.py  mypy.ini  notes.py  pdf.py  prompts.py  pyproject.toml  requirements.txt  sentences.py  text.py  tokens.py
.do/: app.yaml
